# expense_tracker_app_in_django

./: README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
expense/: admin.py  models.py  urls.py  views.py
expense/migrations/: 0001_initial.py
static/css/: base.css
templates/: base.html  e_statistic.html  home.html  index.html
