[tool.poetry]
name = "dev"
version = "0.1.0"
description = "development"
authors = ["Prince Eklu <ameto888@protonmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.8"
redis = "^5.0.8"
hiredis = "^3.0.0"
django-allauth = {extras = ["mfa"], version = "^64.0.0"}
django-sekizai = "^4.1.0"
django-storages = "^1.14.4"
boto3 = "^1.34.161"
django-imagekit = "^5.0.0"
django-cors-headers = "^4.4.0"
django-filter = "^24.3"
django-guardian = "^2.4.0"
pillow = "^10.4.0"
django-ckeditor = "^6.7.1"
psycopg = "^3.2.1"
celery = "^5.4.0"
channels-redis = "^4.2.0"
channels = "^4.1.0"
crispy-bootstrap5 = "^2024.2"
uritemplate = "^4.1.1"
django-celery-results = "^2.5.1"
djangorestframework = "^3.15.2"
markdown = "^3.6"
pygments = "^2.18.0"
gunicorn = "^22.0.0"
sqlparse = "^0.5.1"
environs = {extras = ["django"], version = "^11.0.0"}
dj-database-url = "^2.2.0"
dj-email-url = "^1.0.6"
django-cache-url = "^3.4.5"
django-ckeditor-5 = "^0.2.13"
websockets = "^12.0"
daphne = "^4.1.2"
whitenoise = "^6.7.0"
flower = "^2.0.1"
dj-rest-auth = "^6.0.0"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"
drf-spectacular = "^0.27.2"
fido2 = "^1.1.3"
django-tastypie = "^0.14.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
